--- a/ConectaMais/ConectaMais/src/main/resources/application.properties
+++ b/ConectaMais/ConectaMais/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost/db_Conecta_Mais?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+spring.datasource.username=root
+spring.datasource.password=rudyard
+spring.jpa.show-sql=true
