cadastro ok, mas ligacao com back incompleta

--- a/FrontEnd/ConectaMais/tsconfig.json
+++ b/FrontEnd/ConectaMais/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "strictPropertyInitialization": false, //soluciona a falta construtor nas models, pois nao há inicializaçao dos atributos
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
